Integrate Sqlite3 into app.
This implementation creates a local database and substitute the update,
list and search for items using the API to using the database singleton.

It is now working yet, so I need to discover why (the next step).

--- a/app/TodoREST/TodoREST.csproj
+++ b/app/TodoREST/TodoREST.csproj
@@ -53,6 +53,11 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <PackageReference Include="sqlite-net-pcl" Version="1.8.116" />
+	  <PackageReference Include="SQLitePCLRaw.bundle_green" Version="2.1.4" />
+	</ItemGroup>
+
+	<ItemGroup>
 	  <Compile Update="Views\DvdItemPage.xaml.cs">
 	    <DependentUpon>DvdItemPage.xaml</DependentUpon>
 	  </Compile>
